[package]
name = "ctrl"
version = "0.1.0"
edition = "2021"
authors = ["amcwb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.25.1"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-cron-scheduler = "0.9.3"
toml = "0.7.4"
indoc = "2"
github-webhook = "0.4.0"
dotenv = "0.15.0"
itertools = "0.10.5"
slack-rust = "0.0.1-alpha"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
